// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`public export surface > entry ./api exports a stable set of names 1`] = `
[
  "ConfirmationProgress",
  "Deposit",
  "DepositStatus",
  "DepositStatusDisplay",
  "DirectDeposit",
  "DirectDepositsResponse",
  "ENotarizationStatus",
  "ESessionState",
  "IApiError",
  "IDepositAddress",
  "IDepositAddressesResponse",
  "IGenerateDepositBtcAddressParams",
  "IGetDepositBtcAddressParameters",
  "IGetDepositBtcAddressesParameters",
  "IGetDepositsByAddressParams",
  "IGetNetworkFeeSignatureMappedResponse",
  "IGetNetworkFeeSignatureParams",
  "IGetPointsByAddressParameters",
  "IGetUnstakesByAddressParameters",
  "IGetUserStakeAndBakeSignatureParams",
  "IGetUserStakeAndBakeSignatureResponse",
  "IPointsBase",
  "IPointsByAddressSeason1",
  "IPointsByAddressSeason2",
  "IProtocolPointsBreakdown",
  "IResolveDepositBtcAddressParams",
  "ISetReferralParams",
  "IStoreNetworkFeeSignatureParams",
  "IStoreNetworkFeeSignatureStatus",
  "IStoreStakeAndBakeSignatureParams",
  "IStoreStakeAndBakeSignatureStatus",
  "IgetLBTCExchangeRateParams",
  "IgetLBTCExchangeRateResponse",
  "MIN_CLAIM_AMOUNT_BTC",
  "NativeDeposit",
  "NativeDepositsResponse",
  "PayoutTxStatus",
  "REQUIRED_CONFIRMATIONS",
  "ReferralLookupParams",
  "ReferralLookupResult",
  "ReferralsClient",
  "SANCTIONED_ADDRESS",
  "StatusSeverity",
  "Unstake",
  "calcConfirmations",
  "canResolveDepositBtcAddressWithJwt",
  "depositRequiresAction",
  "fetchBTCbDeposits",
  "fetchDirectDeposits",
  "fetchUnstakesByAddress",
  "generateDepositBtcAddress",
  "getConfirmationProgress",
  "getDepositAssetTypeById",
  "getDepositBtcAddress",
  "getDepositBtcAddresses",
  "getDepositStatus",
  "getDepositStatusDisplay",
  "getDepositsByAddress",
  "getExchangeRatio",
  "getLBTCExchangeRate",
  "getLuxSeason1Points",
  "getLuxSeason2Points",
  "getNetworkFeeSignature",
  "getPointsByAddress",
  "getUnstakesByAddress",
  "getUserStakeAndBakeSignature",
  "isDepositClaimable",
  "isDepositPending",
  "isDepositTerminal",
  "resolveDepositBtcAddress",
  "setReferral",
  "storeNetworkFeeSignature",
  "storeStakeAndBakeSignature",
]
`;

exports[`public export surface > entry ./bridge exports a stable set of names 1`] = `
[
  "BridgeCCIPParameters",
  "BridgeParameters",
  "OFT_GAS_LIMIT",
  "OFT_HI_GAS_LIMIT",
  "OFT_HI_GAS_LIMIT_CHAINS",
  "bridge",
  "bridgeCCIP",
  "bridgeOFT",
  "getBridgeInfo",
]
`;

exports[`public export surface > entry ./btc exports a stable set of names 1`] = `
[
  "BtcActionStatus",
  "BtcActions",
  "BtcDeposit",
  "BtcDepositAndDeploy",
  "BtcDepositAndDeployParams",
  "BtcDepositAndDeployPrepareParams",
  "BtcDepositAndDeployProgress",
  "BtcDepositParams",
  "BtcDepositPrepareParams",
  "BtcDepositProgress",
  "BtcService",
  "BtcStake",
  "BtcStakeAndDeploy",
  "BtcStakeAndDeployParams",
  "BtcStakeAndDeployPrepareParams",
  "BtcStakeAndDeployProgress",
  "BtcStakeParams",
  "BtcStakeProgress",
  "IBtcDeposit",
  "IBtcDepositAndDeploy",
  "IBtcStake",
  "IBtcStakeAndDeploy",
  "btcActions",
  "btcModule",
]
`;

exports[`public export surface > entry ./contracts exports a stable set of names 1`] = `
[
  "BasculeDepositStatus",
  "CancelEarnWithdrawalParameters",
  "DepositEarnParameters",
  "IApproveLBTCParams",
  "IApproveTokenParams",
  "IClaimLBTCParams",
  "IClaimUnstakeRedeemParams",
  "IGetBasculeDepositStatusParameters",
  "IGetBtceSharesParameters",
  "IGetEarnPositionParameters",
  "IGetEarnPositionResponse",
  "IGetPermitNonceParams",
  "IGetStakeAndBakeFeeParams",
  "ISignNetworkFeeParams",
  "ISignNetworkFeeResponse",
  "ISignStakeAndBakeParams",
  "ISignStakeAndBakeResult",
  "IUnstakeLBTCParams",
  "PreviewWithdrawEarnParameters",
  "PreviewWithdrawEarnResult",
  "SignLbtcDestinationAddrParams",
  "UnwrapBtceToLbtcvParameters",
  "WithdrawEarnParameters",
  "WithdrawEarnResult",
  "WrapToBtceParameters",
  "approveLBTC",
  "approveToken",
  "cancelEarnWithdrawal",
  "claimLBTC",
  "claimUnstakeRedeem",
  "depositEarn",
  "depositToken",
  "getAddressConfirmationMessage",
  "getAssetRouterAddress",
  "getBasculeDepositStatus",
  "getBtceShares",
  "getEarnPosition",
  "getLBTCBurningFee",
  "getLBTCMintingFee",
  "getLBTCTotalSupply",
  "getMinRedeemAmount",
  "getMinRedeemAmountWithFee",
  "getMintingFee",
  "getPermitNonce",
  "getRedeemFee",
  "getStakeAndBakeConfig",
  "getStakeAndBakeFee",
  "getTokenAllowance",
  "mintToken",
  "previewWithdrawEarn",
  "redeemToken",
  "signLbtcDestinationAddr",
  "signNetworkFee",
  "signStakeAndBake",
  "unstakeLBTC",
  "unwrapBtceToLbtcv",
  "withdrawEarn",
  "wrapToBtce",
]
`;

exports[`public export surface > entry ./core exports a stable set of names 1`] = `
[
  "ActionEvent",
  "ActionEventMap",
  "Address",
  "AnyProvider",
  "ApiNamespace",
  "ApiVersion",
  "AssetId",
  "BridgeEvent",
  "BridgeEventMap",
  "BtcActionStatus",
  "BtcActions",
  "BtcCoreContext",
  "BtcProvider",
  "BtcService",
  "CHAIN_CATALOG",
  "Chain",
  "ChainMetadata",
  "CommonSignerWriteParameters",
  "ConsoleLoggerOptions",
  "ContractErrorCode",
  "CoreContext",
  "CreateConfigOptions",
  "CustomAsset",
  "DAY",
  "DeployConfig",
  "DeployEvent",
  "DeployEventMap",
  "DeployProtocol",
  "DepositAddressOptions",
  "DepositEvent",
  "DepositEventMap",
  "DestinationChain",
  "DispatchCallback",
  "EIP1193Provider",
  "Env",
  "ErrorCode",
  "EvmActions",
  "EvmCoreContext",
  "EvmDestination",
  "EvmOperationStatus",
  "EvmProvider",
  "EvmService",
  "EvmTransactionRequest",
  "ExchangeRateOptions",
  "FeeAuthState",
  "FeeAuthorizationResult",
  "HOUR",
  "LogLevel",
  "LogMeta",
  "Logger",
  "LombardConfig",
  "LombardError",
  "LombardSDK",
  "LombardSDKOptions",
  "MINUTE",
  "MonitorableAction",
  "NonEvmOperationStatus",
  "PartnerConfig",
  "PartnerConfiguration",
  "ProviderErrorCode",
  "ProviderGetter",
  "ProviderGetters",
  "ProviderKey",
  "ProviderResolver",
  "RETIRED_CHAINS",
  "RPC_URL",
  "RedeemEvent",
  "RedeemEventMap",
  "RegistryErrorCode",
  "RouteParams",
  "SDK_NAME",
  "SDK_RUNTIME",
  "SDK_VERSION",
  "SECOND",
  "SignerAdapter",
  "SignerError",
  "SolanaActions",
  "SolanaDestination",
  "SolanaProvider",
  "StakeEvent",
  "StakeEventMap",
  "StarknetActions",
  "StarknetDestination",
  "StarknetProvider",
  "StepStatus",
  "StoredFeeSignature",
  "StrategyEvent",
  "StrategyEventHandlerMap",
  "StrategyEventMap",
  "StrategyProgress",
  "StrategyStatus",
  "SuiActions",
  "SuiDestination",
  "SuiProvider",
  "TRpcUrlConfig",
  "TokenContractAddressNotFoundError",
  "UnstakeEvent",
  "UnstakeEventMap",
  "UnstakeOptions",
  "UnsupportedTokenFlow",
  "ValidationErrorCode",
  "WithdrawEvent",
  "WithdrawEventMap",
  "assetValueToKey",
  "btcActions",
  "btcModule",
  "chainValueToKey",
  "createAccountFromSigner",
  "createConfig",
  "createConsoleLogger",
  "createLombardSDK",
  "createSilentLogger",
  "createWalletClientFromSigner",
  "ensureHex",
  "evmActions",
  "evmChainIdToChain",
  "evmModule",
  "getAllAssetChains",
  "getAssetAddress",
  "getAssetChains",
  "getAssetChainsForEnvs",
  "getChainMetadata",
  "getChainName",
  "getErrorMessage",
  "getRpcUrlConfig",
  "getSdkHeaders",
  "isAssetDeployed",
  "isAssetId",
  "isBtcProvider",
  "isChain",
  "isEvmChain",
  "isEvmProvider",
  "isHex",
  "isLombardError",
  "isMainnet",
  "isProviderFlow",
  "isRetiredChain",
  "isSignerFlow",
  "isSolanaProvider",
  "isStarknetProvider",
  "isSuiProvider",
  "isTestnet",
  "makePublicClient",
  "now",
  "rpcUrlConfig",
  "solanaActions",
  "starknetActions",
  "suiActions",
  "toUnix",
  "validateTransactionRequest",
  "wrapError",
]
`;

exports[`public export surface > entry ./debug exports a stable set of names 1`] = `
[
  "fetchBtcScriptToAddress",
  "fetchBtcTxInfo",
  "fetchEvmByBtcAddress",
]
`;

exports[`public export surface > entry ./defi exports a stable set of names 1`] = `
[
  "DEFI_REGISTRY",
  "DefiProtocol",
  "DefiProtocols",
  "DefiRegistryToken",
  "EARN_STAKE_AND_BAKE_CHAINS",
  "EarnStakeAndBakeChain",
  "StakeAndBakeRegistry",
  "StakeAndBakeToken",
  "getAvailableProtocols",
  "getAvailableProtocolsWithMetadata",
  "getStakeAndBakeSupportedChains",
  "getSupportedProtocols",
  "isEarnStakeAndBakeChain",
]
`;

exports[`public export surface > entry ./evm exports a stable set of names 1`] = `
[
  "AUTO_MINT_FEE_CHAINS",
  "AddChainParameters",
  "CHAIN_ID_TO_LLAMA_CHAIN_NAME_MAP",
  "CHAIN_ID_TO_VIEM_CHAIN_MAP",
  "ChainId",
  "DispatchCallback",
  "EVM_LBTC_ADDRESSES",
  "EvmActions",
  "EvmDeployParams",
  "EvmDeployPrepareParams",
  "EvmDeployProgress",
  "EvmDeployStatus",
  "EvmDepositParams",
  "EvmDepositPrepareParams",
  "EvmDepositProgress",
  "EvmDepositStatus",
  "EvmOperationStatus",
  "EvmRedeemParams",
  "EvmRedeemPrepareParams",
  "EvmRedeemProgress",
  "EvmRedeemStatus",
  "EvmService",
  "EvmStakeParams",
  "EvmStakePrepareParams",
  "EvmStakeProgress",
  "EvmStakeStatus",
  "EvmTransactionRequest",
  "EvmUnstakeParams",
  "EvmUnstakePrepareParams",
  "EvmUnstakeProgress",
  "EvmUnstakeStatus",
  "EvmWithdrawPrepareParams",
  "EvmWithdrawProgress",
  "EvmWithdrawStatus",
  "FeeAuthState",
  "FeeAuthorizationResult",
  "IEvmCancelWithdraw",
  "IEvmDeploy",
  "IEvmDeposit",
  "IEvmRedeem",
  "IEvmStake",
  "IEvmUnstake",
  "IEvmWithdraw",
  "RETIRED_CHAIN_IDS",
  "RetiredChainId",
  "SignerAdapter",
  "SignerError",
  "StoredFeeSignature",
  "TOKEN_ADDRESSES",
  "addChain",
  "allChains",
  "bob",
  "bobSepolia",
  "createAccountFromSigner",
  "createWalletClientFromSigner",
  "evmActions",
  "evmModule",
  "getChain",
  "getLlamaChainName",
  "getTokenAddressForChain",
  "getTokenByAddress",
  "isEthereumChain",
  "isKatanaChain",
  "isMegaethChain",
  "isMonadChain",
  "isStableChain",
  "isValidChain",
  "katana",
  "megaeth",
  "monad",
  "requiresAutoMintFee",
  "stable",
  "tac",
  "validateTransactionRequest",
]
`;

exports[`public export surface > entry ./metrics exports a stable set of names 1`] = `
[
  "LbtcApy",
  "LbtcEstimatedApy",
  "PositionsSummary",
  "RewardsDistribution",
  "getAdditionalRewards",
  "getApy",
  "getEstimatedApy",
  "getLBTCStats",
  "getPositionsSummary",
]
`;

exports[`public export surface > entry ./strategies exports a stable set of names 1`] = `
[
  "DEFAULT_STRATEGY_ID",
  "DepositStrategyParameters",
  "GetStrategyDepositAssetsParameters",
  "GetStrategyNavHistoryParameters",
  "GetStrategyPendingRedeemParameters",
  "GetStrategyPositionParameters",
  "GetStrategyRatesHistoryParameters",
  "GetStrategyShardsParameters",
  "GetStrategyStateParameters",
  "GetUserActivityFeedParameters",
  "GetUserPositionHistoryParameters",
  "GetUserPositionParameters",
  "GetUserWithdrawalsParameters",
  "IRequestStrategyRedeemResult",
  "IStrategyAllocationRow",
  "IStrategyBaseAsset",
  "IStrategyConfigResponse",
  "IStrategyDepositAsset",
  "IStrategyDepositAssetStatic",
  "IStrategyFeeConfig",
  "IStrategyNavSnapshot",
  "IStrategyPendingRedeem",
  "IStrategyPosition",
  "IStrategyRatesSnapshot",
  "IStrategyShards",
  "IStrategyState",
  "IStrategyUserActivityEntry",
  "IStrategyUserActivityFeed",
  "IStrategyUserPosition",
  "IStrategyUserPositionSnapshot",
  "IStrategyUserWithdrawalRequest",
  "PreviewStrategyDepositParameters",
  "RequestStrategyRedeemParameters",
  "ResolvedStrategy",
  "STRATEGIES",
  "StrategyBaseParameters",
  "StrategyChainDeployment",
  "StrategyDefinition",
  "StrategyId",
  "StrategyReadParameters",
  "StrategyWriteParameters",
  "UnauthorizedWalletJwtError",
  "depositStrategy",
  "findStaticDepositAsset",
  "getStrategyChainIds",
  "getStrategyDefinition",
  "getStrategyDeployment",
  "getStrategyDeployments",
  "getStrategyDepositAssets",
  "getStrategyNavHistory",
  "getStrategyPendingRedeem",
  "getStrategyPosition",
  "getStrategyRatesHistory",
  "getStrategyShards",
  "getStrategyState",
  "getStrategyUserPosition",
  "getUserActivityFeed",
  "getUserPositionHistory",
  "getUserWithdrawals",
  "previewStrategyDeposit",
  "requestStrategyRedeem",
  "resolveStrategy",
]
`;

exports[`public export surface > entry ./utils exports a stable set of names 1`] = `
[
  "AUTO_MINT_FEE_CHAINS",
  "AddChainParameters",
  "AddressKind",
  "BTC_DECIMALS",
  "BlockchainIdentifier",
  "BridgeTokenAddresses",
  "CHAIN_ID_TO_LLAMA_CHAIN_NAME_MAP",
  "CHAIN_ID_TO_VIEM_CHAIN_MAP",
  "ChainId",
  "CommonSignerWriteParameters",
  "DAY",
  "EVM_LBTC_ADDRESSES",
  "Env",
  "HOUR",
  "IApiConfig",
  "MINUTE",
  "RATIO_TOKEN_MAP",
  "RETIRED_CHAIN_IDS",
  "RPC_URL",
  "RatioToken",
  "RetiredChainId",
  "SATOSHI_SCALE",
  "SECOND",
  "SOLANA_DEVNET_CHAIN",
  "SOLANA_MAINNET_CHAIN",
  "SOLANA_TESTNET_CHAIN",
  "SOLANA_TOKEN_ADDRESSES",
  "STARKNET_ASSET_ROUTER_ADDRESSES",
  "STARKNET_MAINNET_CHAIN",
  "STARKNET_SEPOLIA_CHAIN",
  "STARKNET_TOKEN_ADDRESSES",
  "SUI_DEVNET_CHAIN",
  "SUI_LOCALNET_CHAIN",
  "SUI_MAINNET_CHAIN",
  "SUI_TESTNET_CHAIN",
  "SUI_TOKEN_ADDRESSES",
  "SolanaChain",
  "StarknetChainId",
  "SuiChain",
  "TOKEN_ADDRESSES",
  "TRpcUrlConfig",
  "Token",
  "TokenAddresses",
  "TokenAddressesPerEnv",
  "TokenContractAddressNotFoundError",
  "TokenInfo",
  "UnsupportedTokenFlow",
  "addChain",
  "allChains",
  "bob",
  "bobSepolia",
  "ensureHex",
  "fromBaseDenomination",
  "fromSatoshi",
  "getApiConfig",
  "getBaseNetworkByEnv",
  "getBscNetworkByEnv",
  "getChain",
  "getChainIdByName",
  "getChainNameById",
  "getErrorMessage",
  "getEthNetworkByEnv",
  "getLbtcContractAddresses",
  "getLegacyChainNameById",
  "getLlamaChainName",
  "getRpcUrlConfig",
  "getSolanaNetworkByEnv",
  "getSolanaTokenAddress",
  "getSonicNetworkByEnv",
  "getStarknetNetworkByEnv",
  "getStarknetTokenAddress",
  "getSuiNetworkByEnv",
  "getSuiTokenAddress",
  "getTokenAddressForChain",
  "getTokenByAddress",
  "getTokenContractInfo",
  "isEthereumChain",
  "isHex",
  "isKatanaChain",
  "isMegaethChain",
  "isMonadChain",
  "isProviderFlow",
  "isSignerFlow",
  "isSolanaChain",
  "isStableChain",
  "isStarknetChainId",
  "isSuiChain",
  "isUpgradedAbi",
  "isValidChain",
  "katana",
  "megaeth",
  "monad",
  "now",
  "requiresAutoMintFee",
  "retrieveTokenProperties",
  "rpcUrlConfig",
  "stable",
  "tac",
  "toBaseDenomination",
  "toSatoshi",
  "toSatoshiBigInt",
  "toUnix",
]
`;

exports[`public export surface > entry ./vaults exports a stable set of names 1`] = `
[
  "EarnDeposit",
  "EarnWithdrawal",
  "EarnWithdrawals",
  "GetEarnApyParameters",
  "GetEarnDepositsAllChainsParameters",
  "GetEarnDepositsParameters",
  "GetEarnMinimumDepositParameters",
  "GetEarnPointsParameters",
  "GetEarnTVLParameters",
  "GetEarnWithdrawalsAllChainsParameters",
  "GetEarnWithdrawalsParameters",
  "PreviewEarnDepositParameters",
  "getEarnApy",
  "getEarnDeposits",
  "getEarnDepositsAllChains",
  "getEarnMinimumDeposit",
  "getEarnPoints",
  "getEarnTVL",
  "getEarnWithdrawals",
  "getEarnWithdrawalsAllChains",
  "previewEarnDeposit",
]
`;

exports[`public export surface > root entry (.) exports a stable set of names 1`] = `
[
  "AUTO_MINT_FEE_CHAINS",
  "ActionEvent",
  "ActionEventMap",
  "AddChainParameters",
  "Address",
  "AddressKind",
  "AnyProvider",
  "ApiNamespace",
  "ApiVersion",
  "AssetId",
  "BTCE_VAULT_CHAINS",
  "BTCE_VAULT_CONTRACTS",
  "BTC_DECIMALS",
  "BasculeDepositStatus",
  "BlockchainIdentifier",
  "BridgeCCIPParameters",
  "BridgeEvent",
  "BridgeEventMap",
  "BridgeParameters",
  "BridgeTokenAddresses",
  "BtcActionStatus",
  "BtcActions",
  "BtcCoreContext",
  "BtcDeposit",
  "BtcDepositAndDeploy",
  "BtcDepositAndDeployParams",
  "BtcDepositAndDeployPrepareParams",
  "BtcDepositAndDeployProgress",
  "BtcDepositParams",
  "BtcDepositPrepareParams",
  "BtcDepositProgress",
  "BtcProvider",
  "BtcService",
  "BtcStake",
  "BtcStakeAndDeploy",
  "BtcStakeAndDeployParams",
  "BtcStakeAndDeployPrepareParams",
  "BtcStakeAndDeployProgress",
  "BtcStakeParams",
  "BtcStakeProgress",
  "BtceVaultChain",
  "CHAIN_CATALOG",
  "CHAIN_ID_TO_LLAMA_CHAIN_NAME_MAP",
  "CHAIN_ID_TO_VIEM_CHAIN_MAP",
  "CancelEarnWithdrawalParameters",
  "Chain",
  "ChainId",
  "ChainMetadata",
  "CommonSignerWriteParameters",
  "ConfirmationProgress",
  "ConsoleLoggerOptions",
  "ContractErrorCode",
  "CoreContext",
  "CreateConfigOptions",
  "CustomAsset",
  "DAY",
  "DEFI_REGISTRY",
  "DefiProtocol",
  "DefiProtocols",
  "DefiRegistryToken",
  "DeployConfig",
  "DeployEvent",
  "DeployEventMap",
  "DeployProtocol",
  "Deposit",
  "DepositAddressOptions",
  "DepositEarnParameters",
  "DepositEvent",
  "DepositEventMap",
  "DepositStatus",
  "DepositStatusDisplay",
  "DestinationChain",
  "DirectDeposit",
  "DirectDepositsResponse",
  "DispatchCallback",
  "EARN_STAKE_AND_BAKE_CHAINS",
  "EIP1193Provider",
  "ENotarizationStatus",
  "ESessionState",
  "EVM_LBTC_ADDRESSES",
  "EarnDeposit",
  "EarnStakeAndBakeChain",
  "EarnWithdrawal",
  "EarnWithdrawals",
  "Env",
  "ErrorCode",
  "EvmActions",
  "EvmCancelWithdrawParams",
  "EvmCancelWithdrawProgress",
  "EvmCoreContext",
  "EvmDeployParams",
  "EvmDeployPrepareParams",
  "EvmDeployProgress",
  "EvmDeployStatus",
  "EvmDepositParams",
  "EvmDepositPrepareParams",
  "EvmDepositProgress",
  "EvmDepositStatus",
  "EvmDestination",
  "EvmOperationStatus",
  "EvmProvider",
  "EvmRedeemParams",
  "EvmRedeemPrepareParams",
  "EvmRedeemProgress",
  "EvmRedeemStatus",
  "EvmService",
  "EvmStakeParams",
  "EvmStakePrepareParams",
  "EvmStakeProgress",
  "EvmStakeStatus",
  "EvmTransactionRequest",
  "EvmUnstakeParams",
  "EvmUnstakePrepareParams",
  "EvmUnstakeProgress",
  "EvmUnstakeStatus",
  "EvmWithdrawParams",
  "EvmWithdrawPrepareParams",
  "EvmWithdrawProgress",
  "EvmWithdrawStatus",
  "ExchangeRateOptions",
  "FeeAuthState",
  "FeeAuthorizationResult",
  "FeeSignatureAlreadyExistsError",
  "GetEarnApyParameters",
  "GetEarnDepositsAllChainsParameters",
  "GetEarnDepositsParameters",
  "GetEarnPointsParameters",
  "GetEarnTVLParameters",
  "GetEarnWithdrawalsAllChainsParameters",
  "GetEarnWithdrawalsParameters",
  "HOUR",
  "IApiConfig",
  "IApiError",
  "IApproveLBTCParams",
  "IApproveTokenParams",
  "IBtcDeposit",
  "IBtcDepositAndDeploy",
  "IBtcStake",
  "IBtcStakeAndDeploy",
  "IClaimLBTCParams",
  "IClaimUnstakeRedeemParams",
  "IDepositAddress",
  "IDepositAddressesResponse",
  "IEvmCancelWithdraw",
  "IEvmDeploy",
  "IEvmDeposit",
  "IEvmRedeem",
  "IEvmStake",
  "IEvmUnstake",
  "IEvmWithdraw",
  "IGenerateDepositBtcAddressParams",
  "IGetBasculeDepositStatusParameters",
  "IGetBtceSharesParameters",
  "IGetDepositBtcAddressParameters",
  "IGetDepositBtcAddressesParameters",
  "IGetDepositsByAddressParams",
  "IGetEarnPositionParameters",
  "IGetEarnPositionResponse",
  "IGetNetworkFeeSignatureMappedResponse",
  "IGetNetworkFeeSignatureParams",
  "IGetPermitNonceParams",
  "IGetPointsByAddressParameters",
  "IGetStakeAndBakeFeeParams",
  "IGetUnstakesByAddressParameters",
  "IGetUserStakeAndBakeSignatureParams",
  "IGetUserStakeAndBakeSignatureResponse",
  "IPointsBase",
  "IPointsByAddressSeason1",
  "IPointsByAddressSeason2",
  "IProtocolPointsBreakdown",
  "IResolveDepositBtcAddressParams",
  "ISetReferralParams",
  "ISignNetworkFeeParams",
  "ISignNetworkFeeResponse",
  "ISignStakeAndBakeParams",
  "ISignStakeAndBakeResult",
  "IStoreNetworkFeeSignatureParams",
  "IStoreNetworkFeeSignatureStatus",
  "IStoreStakeAndBakeSignatureParams",
  "IStoreStakeAndBakeSignatureStatus",
  "IUnstakeLBTCParams",
  "IgetLBTCExchangeRateParams",
  "IgetLBTCExchangeRateResponse",
  "LbtcApy",
  "LbtcEstimatedApy",
  "LogLevel",
  "LogMeta",
  "Logger",
  "LombardConfig",
  "LombardError",
  "LombardSDK",
  "LombardSDKOptions",
  "MINUTE",
  "MIN_CLAIM_AMOUNT_BTC",
  "MIN_REDEEM_AMOUNT_BTC",
  "MIN_STAKE_AMOUNT_BTC",
  "MonitorableAction",
  "NativeDeposit",
  "NativeDepositsResponse",
  "NonEvmOperationStatus",
  "OFT_GAS_LIMIT",
  "OFT_HI_GAS_LIMIT",
  "OFT_HI_GAS_LIMIT_CHAINS",
  "PartnerConfig",
  "PartnerConfiguration",
  "PayoutTxStatus",
  "PollWalletVerificationParams",
  "PollWalletVerificationRequest",
  "PositionsSummary",
  "PreviewWithdrawEarnParameters",
  "PreviewWithdrawEarnResult",
  "ProviderErrorCode",
  "ProviderGetter",
  "ProviderGetters",
  "ProviderKey",
  "ProviderResolver",
  "RATIO_TOKEN_MAP",
  "REQUIRED_CONFIRMATIONS",
  "RETIRED_CHAINS",
  "RETIRED_CHAIN_IDS",
  "RPC_URL",
  "RatioToken",
  "RedeemEvent",
  "RedeemEventMap",
  "ReferralLookupParams",
  "ReferralLookupResult",
  "ReferralsClient",
  "RegistryErrorCode",
  "RequestWalletChallengeParams",
  "RetiredChainId",
  "RevokeWalletTokenParams",
  "RevokeWalletTokenRequest",
  "RewardsDistribution",
  "RouteParams",
  "SANCTIONED_ADDRESS",
  "SATOSHI_SCALE",
  "SDK_NAME",
  "SDK_RUNTIME",
  "SDK_VERSION",
  "SECOND",
  "SOLANA_DEVNET_CHAIN",
  "SOLANA_MAINNET_CHAIN",
  "SOLANA_TESTNET_CHAIN",
  "SOLANA_TOKEN_ADDRESSES",
  "STARKNET_ASSET_ROUTER_ADDRESSES",
  "STARKNET_MAINNET_CHAIN",
  "STARKNET_SEPOLIA_CHAIN",
  "STARKNET_TOKEN_ADDRESSES",
  "SUI_DEVNET_CHAIN",
  "SUI_LOCALNET_CHAIN",
  "SUI_MAINNET_CHAIN",
  "SUI_TESTNET_CHAIN",
  "SUI_TOKEN_ADDRESSES",
  "SignLbtcDestinationAddrParams",
  "SignerAdapter",
  "SignerError",
  "SolanaActions",
  "SolanaChain",
  "SolanaDestination",
  "SolanaProvider",
  "StakeAndBakeRegistry",
  "StakeAndBakeToken",
  "StakeEvent",
  "StakeEventMap",
  "StarknetActions",
  "StarknetChainId",
  "StarknetDestination",
  "StarknetProvider",
  "StatusSeverity",
  "StepStatus",
  "StoredFeeSignature",
  "StrategyEvent",
  "StrategyEventHandlerMap",
  "StrategyEventMap",
  "StrategyProgress",
  "StrategyStatus",
  "SuiActions",
  "SuiChain",
  "SuiDestination",
  "SuiProvider",
  "TOKEN_ADDRESSES",
  "TRpcUrlConfig",
  "Token",
  "TokenAddresses",
  "TokenAddressesPerEnv",
  "TokenContractAddressNotFoundError",
  "TokenInfo",
  "Unstake",
  "UnstakeEvent",
  "UnstakeEventMap",
  "UnstakeOptions",
  "UnsupportedTokenFlow",
  "UnwrapBtceToLbtcvParameters",
  "VERIFICATION_STATUS",
  "ValidationErrorCode",
  "VaultWithdrawalsOptions",
  "VerifyWalletSignatureParams",
  "WalletAuthChain",
  "WalletAuthService",
  "WalletChallengeRequest",
  "WalletChallengeResponse",
  "WalletVerifyRequest",
  "WalletVerifyResponse",
  "WalletVerifyResult",
  "WithdrawEarnParameters",
  "WithdrawEarnResult",
  "WithdrawEvent",
  "WithdrawEventMap",
  "WrapToBtceParameters",
  "addChain",
  "allChains",
  "approveLBTC",
  "approveToken",
  "assetValueToKey",
  "bob",
  "bobSepolia",
  "bridge",
  "bridgeCCIP",
  "bridgeOFT",
  "btcActions",
  "btcModule",
  "calcConfirmations",
  "canResolveDepositBtcAddressWithJwt",
  "cancelEarnWithdrawal",
  "chainValueToKey",
  "claimLBTC",
  "claimUnstakeRedeem",
  "createAccountFromSigner",
  "createConfig",
  "createConsoleLogger",
  "createLombardSDK",
  "createSilentLogger",
  "createWalletClientFromSigner",
  "depositEarn",
  "depositRequiresAction",
  "depositToken",
  "ensureHex",
  "evmActions",
  "evmChainIdToChain",
  "evmModule",
  "fetchBTCbDeposits",
  "fetchBtcScriptToAddress",
  "fetchBtcTxInfo",
  "fetchDirectDeposits",
  "fetchEvmByBtcAddress",
  "fetchUnstakesByAddress",
  "fromBaseDenomination",
  "fromSatoshi",
  "generateDepositBtcAddress",
  "getAdditionalRewards",
  "getAddressConfirmationMessage",
  "getAllAssetChains",
  "getApiConfig",
  "getApy",
  "getAssetAddress",
  "getAssetChains",
  "getAssetChainsForEnvs",
  "getAssetRouterAddress",
  "getAvailableProtocols",
  "getAvailableProtocolsWithMetadata",
  "getBasculeDepositStatus",
  "getBaseNetworkByEnv",
  "getBridgeInfo",
  "getBscNetworkByEnv",
  "getBtceShares",
  "getChain",
  "getChainIdByName",
  "getChainMetadata",
  "getChainName",
  "getChainNameById",
  "getConfirmationProgress",
  "getDepositAssetTypeById",
  "getDepositBtcAddress",
  "getDepositBtcAddresses",
  "getDepositStatus",
  "getDepositStatusDisplay",
  "getDepositsByAddress",
  "getEarnApy",
  "getEarnDeposits",
  "getEarnDepositsAllChains",
  "getEarnPoints",
  "getEarnPosition",
  "getEarnTVL",
  "getEarnWithdrawals",
  "getEarnWithdrawalsAllChains",
  "getErrorMessage",
  "getEstimatedApy",
  "getEthNetworkByEnv",
  "getExchangeRatio",
  "getExplorerTxUrl",
  "getLBTCBurningFee",
  "getLBTCExchangeRate",
  "getLBTCMintingFee",
  "getLBTCStats",
  "getLBTCTotalSupply",
  "getLbtcContractAddresses",
  "getLegacyChainNameById",
  "getLlamaChainName",
  "getLuxSeason1Points",
  "getLuxSeason2Points",
  "getMinRedeemAmount",
  "getMinRedeemAmountWithFee",
  "getMintingFee",
  "getNetworkFeeSignature",
  "getPermitNonce",
  "getPointsByAddress",
  "getPositionsSummary",
  "getRedeemFee",
  "getRpcUrlConfig",
  "getSdkHeaders",
  "getSolanaNetworkByEnv",
  "getSolanaTokenAddress",
  "getSonicNetworkByEnv",
  "getStakeAndBakeConfig",
  "getStakeAndBakeFee",
  "getStakeAndBakeSupportedChains",
  "getStarknetNetworkByEnv",
  "getStarknetTokenAddress",
  "getSuiNetworkByEnv",
  "getSuiTokenAddress",
  "getSupportedProtocols",
  "getTokenAddressForChain",
  "getTokenAllowance",
  "getTokenByAddress",
  "getTokenContractInfo",
  "getUnstakesByAddress",
  "getUserStakeAndBakeSignature",
  "isAssetDeployed",
  "isAssetId",
  "isBtcProvider",
  "isBtceVaultChain",
  "isChain",
  "isDepositClaimable",
  "isDepositPending",
  "isDepositTerminal",
  "isEarnStakeAndBakeChain",
  "isEthereumChain",
  "isEvmChain",
  "isEvmProvider",
  "isHex",
  "isKatanaChain",
  "isLombardError",
  "isMainnet",
  "isMegaethChain",
  "isMonadChain",
  "isProviderFlow",
  "isRetiredChain",
  "isSignerFlow",
  "isSolanaChain",
  "isSolanaProvider",
  "isStableChain",
  "isStarknetChainId",
  "isStarknetProvider",
  "isSuiChain",
  "isSuiProvider",
  "isTestnet",
  "isUpgradedAbi",
  "isValidChain",
  "katana",
  "makePublicClient",
  "megaeth",
  "mintToken",
  "monad",
  "now",
  "pollWalletVerification",
  "previewWithdrawEarn",
  "redeemToken",
  "requestWalletChallenge",
  "requiresAutoMintFee",
  "resolveDepositBtcAddress",
  "retrieveTokenProperties",
  "revokeWalletToken",
  "rpcUrlConfig",
  "setReferral",
  "signLbtcDestinationAddr",
  "signNetworkFee",
  "signStakeAndBake",
  "solanaActions",
  "stable",
  "starknetActions",
  "storeNetworkFeeSignature",
  "storeStakeAndBakeSignature",
  "suiActions",
  "tac",
  "toBaseDenomination",
  "toSatoshi",
  "toSatoshiBigInt",
  "toUnix",
  "unstakeLBTC",
  "unwrapBtceToLbtcv",
  "validateTransactionRequest",
  "verifyWalletSignature",
  "walletAuthModule",
  "withdrawEarn",
  "wrapError",
  "wrapToBtce",
]
`;
